Fix issue #69, vertically align css example output

--- a/live-examples/css-examples/css/background-image.css
+++ b/live-examples/css-examples/css/background-image.css
@@ -3,7 +3,7 @@
 }
 
 #example-element {
-    background-color: #fff;
+    background-color: transparent;
     padding: 0 40px;
     min-height: 200px;
 }
